--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image:secure_url" content="https://i.pravatar.cc/300">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="colins.test.com/referal?referal=Viktor123">
+    <meta property="og:url" content="https://register.mysugardaddy.com/registration">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="MySugardaddy">
 
