--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image:secure_url" content="https://i.pravatar.cc/300">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://register.mysugardaddy.com/registration">
+    <meta property="og:url" content="https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP_test">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="MySugardaddy">
 
@@ -157,7 +157,7 @@
     <h1>User123 invites you!</h1>
     <p>user information...</p>
 
-    <a href="htt" class="button">Join Now</a>
+    <a href="https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP" class="button">Join Now</a>
 
     <div class="redirect-message">
         <p>Redirecting you automatically...</p>
