--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+    <meta http-equiv="refresh" content="2;url=https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP">
     <title>Viktor123 invites you to MySugardaddy</title>
 
     <!-- Open Graph Protocol meta tags for social media sharing -->
@@ -155,7 +155,7 @@
 
 
     <h1>User123 invites you!</h1>
-    <p>user information...</p>
+    <p>Share the joy of real connections and unforgettable moments - a dating experience that really counts!</p>
 
     <a href="https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP" class="button">Join Now</a>
 
@@ -166,17 +166,17 @@
 </div>
 
 <script>
-    // Immediate redirect if user clicks anywhere on the page
-    // document.body.addEventListener('click', function(e) {
-    //     if (!e.target.classList.contains('button')) {
-    //         window.location.href = 'https://mysugardaddy.com';
-    //     }
-    // });
-    //
-    // // Fallback redirect in case meta refresh doesn't work
-    // setTimeout(function() {
-    //     window.location.href = 'https://mysugardaddy.com';
-    // }, 1);
+     
+     document.body.addEventListener('click', function(e) {
+         if (!e.target.classList.contains('button')) {
+             window.location.href = 'https://mysugardaddy.com';
+         }
+     });
+    
+     // Fallback redirect in case meta refresh doesn't work
+     setTimeout(function() {
+         window.location.href = 'https://mysugardaddy.com';
+     }, 1);
 </script>
 </body>
 </html>
