--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
      
      document.body.addEventListener('click', function(e) {
          if (!e.target.classList.contains('button')) {
-             window.location.href = 'https://mysugardaddy.com';
+             window.location.href = 'https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP';
          }
      });
     
      // Fallback redirect in case meta refresh doesn't work
      setTimeout(function() {
-         window.location.href = 'https://mysugardaddy.com';
+         window.location.href = 'https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP';
      }, 1);
 </script>
 </body>
