--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta http-equiv="refresh" content="2;url=https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP">
+    <!-- <meta http-equiv="refresh" content="2;url=https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP"> -->
     <title>Viktor123 invites you to MySugardaddy</title>
 
     <!-- Open Graph Protocol meta tags for social media sharing -->
@@ -167,16 +167,16 @@
 
 <script>
      
-     document.body.addEventListener('click', function(e) {
-         if (!e.target.classList.contains('button')) {
-             window.location.href = 'https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP';
-         }
-     });
+     // document.body.addEventListener('click', function(e) {
+     //     if (!e.target.classList.contains('button')) {
+     //         window.location.href = 'https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP';
+     //     }
+     // });
     
-     // Fallback redirect in case meta refresh doesn't work
-     setTimeout(function() {
-         window.location.href = 'https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP';
-     }, 1);
+     // // Fallback redirect in case meta refresh doesn't work
+     // setTimeout(function() {
+     //     window.location.href = 'https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP';
+     // }, 1);
 </script>
 </body>
 </html>
