--- a/ogp-landing-referal.html
+++ b/ogp-landing-referal.html
@@ -10,8 +10,8 @@
     <!-- Open Graph Protocol meta tags for social media sharing -->
     <meta property="og:title" content="Viktor123 invites you to MySugardaddy">
     <meta property="og:description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
-    <meta property="og:image" content="/msd-dating_1200_630.jpg">
-    <meta property="og:image:secure_url" content="/msd-dating_1200_630.jpg">
+    <meta property="og:image" content="msd-dating_1200_630.jpg">
+    <meta property="og:image:secure_url" content="msd-dating_1200_630.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="colins.test.com/referal?referal=Viktor123">
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Viktor123 invites you to MySugardaddy">
     <meta name="twitter:description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
-    <meta name="twitter:image" content="/msd-dating_1200_630.jpg">
+    <meta name="twitter:image" content="msd-dating_1200_630.jpg">
 
     <!-- Additional meta tags -->
     <meta name="description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
