--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- <meta http-equiv="refresh" content="2;url=https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP"> -->
+
     <title>Viktor123 invites you to MySugardaddy</title>
 
     <!-- Open Graph Protocol meta tags for social media sharing -->
     <meta property="og:title" content="Viktor123 invites you to MySugardaddy">
     <meta property="og:description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
-    <meta property="og:image" content="https://i.pravatar.cc/300">
-    <meta property="og:image:secure_url" content="https://i.pravatar.cc/300">
+    <meta property="og:image" content="msd-dating_1200_630.jpg">
+    <meta property="og:image:secure_url" content="msd-dating_1200_630.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP_test">
+    <meta property="og:url" content="colins.test.com/referal?referal=Viktor123">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="MySugardaddy">
 
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Viktor123 invites you to MySugardaddy">
     <meta name="twitter:description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
-    <meta name="twitter:image" content="https://i.pravatar.cc/300">
+    <meta name="twitter:image" content="msd-dating_1200_630.jpg">
 
     <!-- Additional meta tags -->
     <meta name="description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
@@ -155,9 +155,9 @@
 
 
     <h1>User123 invites you!</h1>
-    <p>Share the joy of real connections and unforgettable moments - a dating experience that really counts!</p>
+    <p>user information...</p>
 
-    <a href="https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP" class="button">Join Now</a>
+    <a href="htt" class="button">Join Now</a>
 
     <div class="redirect-message">
         <p>Redirecting you automatically...</p>
@@ -166,18 +166,17 @@
 </div>
 
 <script>
-     
-     // document.body.addEventListener('click', function(e) {
-     //     if (!e.target.classList.contains('button')) {
-     //         window.location.href = 'https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP';
-     //     }
-     // });
-    
-     // // Fallback redirect in case meta refresh doesn't work
-     // setTimeout(function() {
-     //     window.location.href = 'https://register.mysugardaddy.com/registration?referral=lPvAhDJRMP';
-     // }, 1);
+    // Immediate redirect if user clicks anywhere on the page
+    // document.body.addEventListener('click', function(e) {
+    //     if (!e.target.classList.contains('button')) {
+    //         window.location.href = 'https://mysugardaddy.com';
+    //     }
+    // });
+    //
+    // // Fallback redirect in case meta refresh doesn't work
+    // setTimeout(function() {
+    //     window.location.href = 'https://mysugardaddy.com';
+    // }, 1);
 </script>
 </body>
 </html>
-
