--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
     <!-- Open Graph Protocol meta tags for social media sharing -->
     <meta property="og:title" content="Viktor123 invites you to MySugardaddy">
     <meta property="og:description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
-    <meta property="og:image" content="msd-dating_1200_630.jpg">
-    <meta property="og:image:secure_url" content="msd-dating_1200_630.jpg">
+    <meta property="og:image" content="https://i.pravatar.cc/300">
+    <meta property="og:image:secure_url" content="https://i.pravatar.cc/300">
+     <meta property="og:image:width" content="630">
+    <meta property="og:image:height" content="630">
+
+      <meta property="og:image" content="https://community.mysugardaddy.com/assets/theme/msd/icon/projectId/normal/vip_banner.webp">
+    <meta property="og:image:secure_url" content="https://community.mysugardaddy.com/assets/theme/msd/icon/projectId/normal/vip_banner.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    
     <meta property="og:url" content="colins.test.com/referal?referal=Viktor123">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="MySugardaddy">
