--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
-      <meta property="og:image" content="https://i.pravatar.cc/300">
-    <meta property="og:image:secure_url" content="https://i.pravatar.cc/300">
-     <meta property="og:image:width" content="630">
-    <meta property="og:image:height" content="630">
+      <meta property="og:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/1200x1200.png">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/1200x1200.png">
+     <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="1200">
     
     <meta property="og:url" content="colins.test.com/referal?referal=Viktor123">
     <meta property="og:type" content="website">
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Viktor123 invites you to MySugardaddy">
     <meta name="twitter:description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
-    <meta name="twitter:image" content="https://i.pravatar.cc/300">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/1200x1200.png">
 
     <!-- Additional meta tags -->
     <meta name="description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
