--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta property="og:description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
   
 
-      <meta property="og:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.png">
-    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.png">
-    <meta property="og:image:width" content="630">
+      <meta property="og:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/msd-dating_1200_630.jpg">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/msd-dating_1200_630.jpg">
+    <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
-      <meta property="og:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/1200x1200.png">
+      <meta property="og:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.webp">
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/1200x1200.png">
      <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
