--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <meta property="og:image:height" content="630">
 
       <meta property="og:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.webp">
-    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/1200x1200.png">
-     <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="1200">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.webp">
+     <meta property="og:image:width" content="630">
+    <meta property="og:image:height" content="630">
     
     <meta property="og:url" content="colins.test.com/referal?referal=Viktor123">
     <meta property="og:type" content="website">
