--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Viktor123 invites you to MySugardaddy">
     <meta name="twitter:description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.webp">
 
     <!-- Additional meta tags -->
     <meta name="description" content="Share the joy of real connections and unforgettable moments - a dating experience that really counts!">
