--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/msd-dating_1200_630.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/jpg">
 
       <meta property="og:image" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.webp">
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Mykola59/testOGP/refs/heads/main/630_630.webp">
      <meta property="og:image:width" content="630">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/webp">
     
     <meta property="og:url" content="colins.test.com/referal?referal=Viktor123">
     <meta property="og:type" content="website">
